--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,92 @@
-html, body {
-  margin: 20px;
+html {
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background: #333333;
+  background-repeat:no-repeat;
+  background: -webkit-radial-gradient( #666666, #333333);
+  background: -moz-radial-gradient( #666666, #333333);
+  background: -ms-radial-gradient( #666666, #333333);
+  background: -o-radial-gradient( #666666, #333333);
+  background: radial-gradient( #666666, #333333);
+}
+
+body {
+  background-color: inherit;
+  padding-top: 70px;
+}
+
+.site-wrapper {
+  width: 100%;
+  height: 100%;
+  display: table;
+  text-align: center;
+}
+
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: middle
+}
+
+.login-view {
+  color: white;
+  height: 100vh;
+}
+
+.btn-google-auth {}
+
+.btn-google-auth > i {
+  padding-right: 5px;
+  border-right: 1px solid;
+}
+
+.avatar-img {
+  /*float: right;*/
+  height: 50px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+@media (min-width: 768px) {
+  .avatar-img {
+    float: right !important;
+    /*margin-right: -15px;*/
+  }
+}
+
+.bs-example {
+    position: relative;
+    padding: 45px 15px 15px;
+    margin: 0 -15px 15px;
+    border-color: #e5e5e5 #eee #eee;
+    border-style: solid;
+    border-width: 1px 0;
+    -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+    box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+    background: white !important;
+}
+
+@media (min-width: 768px) {
+  .bs-example {
+    margin-right:0;
+    margin-left: 0;
+    background-color: #fff;
+    border-color: #ddd;
+    border-width: 1px;
+    border-radius: 4px 4px 4px 4px;
+    -webkit-box-shadow: none;
+    box-shadow: none
+  }
+}
+
+.table-price-col {
+  text-align: right;
+}
+
+.euro:after {
+  padding-left: 5px;
+  color: #666666;
+  content: '€';
 }
